[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ramclaw-openclaw"
version = "0.1.0"
description = "Sandboxed, LM Studio only fork of OpenClaw bundled in RamClaw"
authors = [{ name = "RamClaw" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.32",
]

[project.scripts]
openclaw-agent = "openclaw.agent:main"

[tool.setuptools.packages.find]
where = ["openclaw"]
